# audio101

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/audio101/: pcm_player.hpp
include/fakeasound/: fakeasound.hpp
samples/: free-44k-stereo.raw
src/: pcm_player.cpp  playpcm.cpp
src/audio101/: pcm_player.cpp  playpcm.cpp
src/fakeasound/: fakeasound.cpp
test/: CMakeLists.txt  test_pcm_player.cpp
